...
                                <color key="tintColor" red="0.75559091567993164" green="0.75556838512420654" blue="0.75558114051818848" alpha="1" colorSpace="calibratedRGB"/>
                                <state key="normal" title="O"/>
                                <connections>
                                    <action selector="ticTacToeButtonTouched:" destination="BYZ-38-t0r" eventType="touchUpInside" id="KzM-Oe-zsi"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Player 1's turn" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="COf-sQ-DKu">
                                <rect key="frame" x="237" y="5" width="126" height="36"/>
                                <animations/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FMw-bf-Zz4">
                                <rect key="frame" x="251" y="555" width="99" height="36"/>
                                <animations/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                <state key="normal" title="New Game"/>
                                <connections>
                                    <action selector="newGameTouched:" destination="BYZ-38-t0r" eventType="touchUpInside" id="hML-YB-dvf"/>
                                </connections>
                            </button>
                        </subviews>
                        <animations/>
...
