...
    
    func gameResult() -> (state: Int, message: String) {
        switch gameState {
        case 1:
            return (state: gameState, message: "Player \(currentPlayer) wins")
        case 2:
            return (state: gameState, message: "Players tied")
        default:
            return (state: gameState, message: "Player \(currentPlayer)'s turn")
        }
    }
    
    func play(x: Int, y: Int) {
...
